# pack_bools

./: Cargo.toml  README.md
src/: lib.rs
src/pack_bools/: mod.rs
src/pack_bools/config/: mod.rs  parse.rs
src/pack_bools/config/global/: mod.rs  modify.rs  parse.rs
src/pack_bools/config/local/: mod.rs  modify.rs  parse.rs
tests/: simple_tests.rs  trybuild.rs
tests/compile/: defaults_inline.rs  defaults_inline.stderr  invalid_type.rs  invalid_type.stderr  just_enough.rs  no_getters.rs  no_getters.stderr  no_getters_setters.stderr  no_setters.rs  no_setters.stderr  private_getters.rs  private_getters.stderr  super_many_bools.rs  super_many_bools.stderr  too_many_bools.rs  too_many_bools.stderr
