[package]
name = "pack_bools"
version = "0.1.1"
edition = "2021"
authors = ["Jonathan Widén"]
license = "MIT"
keywords = ["bitfields", "packed", "macro"]
repository = "https://github.com/CMDJojo/pack_bools"
description = "Attribute macro to pack all boolean fields of a struct into a bitfield"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.64" , features = ["full", "extra-traits"]}
proc-macro2 = "1.0.82"
quote = "1.0.36"

[dev-dependencies]
trybuild = "1.0.96"
